Add comprehensive test suite for interactive demo
- Implemented complex number tests including creation, arithmetic, conjugate, and magnitude.
- Added DSP tests covering FFT, IFFT, window functions, and convolution.
- Created higher-order function tests for map, filter, reduce, and piping.
- Developed matrix tests for creation, arithmetic, multiplication, determinant, and inverse.
- Introduced numerical tests for differentiation, integration, and root finding methods.
- Added optimization tests for linear programming, including simplex and sensitivity analysis.
- Implemented tests for symbolic computation, including expressions, lambdas, and higher-order functions.
- Created stress tests for memory management and computational performance.
- Added vector tests for creation, arithmetic operations, and statistical calculations.
- Enhanced UI components for displaying test results and managing test categories.

--- a/tests/interactive-demo/index.html
+++ b/tests/interactive-demo/index.html
@@ -36,6 +36,7 @@
           <button class="test-category" data-category="hof">Higher-Order Functions</button>
           <button class="test-category" data-category="matrix">Matrix Operations</button>
           <button class="test-category" data-category="numerical">Numerical Calculus</button>
+          <button class="test-category" data-category="optimization">Optimization & LP</button>
           <button class="test-category" data-category="soc">SOC Expressions & Lambdas</button>
           <button class="test-category" data-category="stress">Stress Test</button>
           <button class="test-category" data-category="benchmark">Benchmarks</button>
@@ -132,6 +133,22 @@
             <button class="test-btn" data-test="numerical-newton">Newton's Method</button>
             <button class="test-btn" data-test="numerical-secant">Secant Method</button>
             <button class="test-btn" data-test="numerical-all">Run All Numerical Tests</button>
+          </div>
+        </div>
+
+        <div class="test-section hidden" id="section-optimization">
+          <h2>Linear Programming & Optimization</h2>
+          <div class="test-grid">
+            <button class="test-btn" data-test="opt-simple-lp">Simple LP Problem</button>
+            <button class="test-btn" data-test="opt-production">Production Planning</button>
+            <button class="test-btn" data-test="opt-simplex">Primal Simplex</button>
+            <button class="test-btn" data-test="opt-revised">Revised Simplex</button>
+            <button class="test-btn" data-test="opt-objective">Objective Value</button>
+            <button class="test-btn" data-test="opt-shadow-price">Shadow Prices</button>
+            <button class="test-btn" data-test="opt-sensitivity-c">Sensitivity Analysis (c)</button>
+            <button class="test-btn" data-test="opt-sensitivity-b">Sensitivity Analysis (b)</button>
+            <button class="test-btn" data-test="opt-all-methods">Compare All Methods</button>
+            <button class="test-btn" data-test="opt-full-analysis">Full Analysis (All Features)</button>
           </div>
         </div>
 
