feat: Add Integer Programming capabilities with Branch & Bound
- Implemented Integer Linear Programming (intlinprog) and Binary Linear Programming (binaryLinprog) methods in RustBindings and OptimizationOps.
- Enhanced the interactive demo to include buttons for testing integer programming scenarios.
- Added comprehensive tests for integer programming, including simple integer LP, 0-1 knapsack, large knapsack, integer production planning, and capital budgeting.
- Developed the Branch & Bound algorithm for solving integer linear programming problems in Rust.
- Updated the module structure to include integer programming functionalities.

--- a/tests/interactive-demo/index.html
+++ b/tests/interactive-demo/index.html
@@ -150,6 +150,14 @@
             <button class="test-btn" data-test="opt-all-methods">Compare All Methods</button>
             <button class="test-btn" data-test="opt-full-analysis">Full Analysis (All Features)</button>
           </div>
+          <h3 style="margin-top: 2rem;">Integer Programming</h3>
+          <div class="test-grid">
+            <button class="test-btn" data-test="opt-integer-simple">Simple Integer LP</button>
+            <button class="test-btn" data-test="opt-knapsack-01">0-1 Knapsack</button>
+            <button class="test-btn" data-test="opt-knapsack-large">Large Knapsack (5 items)</button>
+            <button class="test-btn" data-test="opt-integer-production">Integer Production Planning</button>
+            <button class="test-btn" data-test="opt-capital-budgeting">Capital Budgeting</button>
+          </div>
         </div>
 
         <div class="test-section hidden" id="section-soc">
