--- a/tests/interactive-demo/index.html
+++ b/tests/interactive-demo/index.html
@@ -10,7 +10,7 @@
   <div class="container">
     <header>
       <h1>🧮 Achronyme Interactive Demo</h1>
-      <p class="subtitle">WASM SDK Feature Testbed - v0.4.0</p>
+      <p class="subtitle">WASM SDK Feature Testbed - v0.5.3</p>
     </header>
 
     <div class="status-bar">
@@ -37,6 +37,7 @@
           <button class="test-category" data-category="matrix">Matrix Operations</button>
           <button class="test-category" data-category="numerical">Numerical Calculus</button>
           <button class="test-category" data-category="optimization">Optimization & LP</button>
+          <button class="test-category" data-category="conditional">Conditional & Piecewise</button>
           <button class="test-category" data-category="soc">SOC Expressions & Lambdas</button>
           <button class="test-category" data-category="stress">Stress Test</button>
           <button class="test-category" data-category="benchmark">Benchmarks</button>
@@ -85,14 +86,18 @@
         </div>
 
         <div class="test-section hidden" id="section-dsp">
-          <h2>DSP Functions</h2>
+          <h2>DSP Functions - Advanced Suite</h2>
           <div class="test-grid">
-            <button class="test-btn" data-test="dsp-fft">FFT (Fast Fourier Transform)</button>
-            <button class="test-btn" data-test="dsp-fft-mag">FFT Magnitude</button>
-            <button class="test-btn" data-test="dsp-ifft">IFFT (Inverse FFT)</button>
-            <button class="test-btn" data-test="dsp-windows">Window Functions</button>
-            <button class="test-btn" data-test="dsp-convolution">Convolution</button>
-            <button class="test-btn" data-test="dsp-pipeline">DSP Pipeline</button>
+            <button class="test-btn" data-test="dsp-fft-basic">FFT Basic (8 samples)</button>
+            <button class="test-btn" data-test="dsp-harmonic-analysis">Harmonic Analysis (50Hz + 120Hz)</button>
+            <button class="test-btn" data-test="dsp-spectral-leakage">Spectral Leakage & Windowing</button>
+            <button class="test-btn" data-test="dsp-noise-filtering">Noise Filtering (MA Filter)</button>
+            <button class="test-btn" data-test="dsp-windowing-comparison">Window Comparison (Energy)</button>
+            <button class="test-btn" data-test="dsp-fft-ifft-roundtrip">FFT↔IFFT Roundtrip</button>
+            <button class="test-btn" data-test="dsp-convolution-properties">Convolution Properties</button>
+            <button class="test-btn" data-test="dsp-full-pipeline">Full DSP Pipeline (3-tone)</button>
+            <button class="test-btn" data-test="dsp-real-world-audio">Audio Synthesis (A4 note + harmonics)</button>
+            <button class="test-btn" data-test="dsp-performance-stress">Performance Stress (10×FFT 8K)</button>
           </div>
         </div>
 
@@ -157,6 +162,27 @@
             <button class="test-btn" data-test="opt-knapsack-large">Large Knapsack (5 items)</button>
             <button class="test-btn" data-test="opt-integer-production">Integer Production Planning</button>
             <button class="test-btn" data-test="opt-capital-budgeting">Capital Budgeting</button>
+          </div>
+        </div>
+
+        <div class="test-section hidden" id="section-conditional">
+          <h2>Conditional & Piecewise Functions</h2>
+          <div class="test-grid">
+            <button class="test-btn" data-test="conditional-abs-scalar">Absolute Value (Scalar)</button>
+            <button class="test-btn" data-test="conditional-abs-vector">Absolute Value (Vector)</button>
+            <button class="test-btn" data-test="conditional-relu-scalar">ReLU Activation (Scalar)</button>
+            <button class="test-btn" data-test="conditional-relu-vector">ReLU Activation (Vector)</button>
+            <button class="test-btn" data-test="conditional-leaky-relu">Leaky ReLU</button>
+            <button class="test-btn" data-test="conditional-sign">Sign Function</button>
+            <button class="test-btn" data-test="conditional-heaviside">Heaviside Step</button>
+            <button class="test-btn" data-test="conditional-clamp">Clamp/Saturation</button>
+            <button class="test-btn" data-test="conditional-rect-pulse">Rectangular Pulse</button>
+            <button class="test-btn" data-test="conditional-square-wave">Square Wave</button>
+            <button class="test-btn" data-test="conditional-triangle-wave">Triangle Wave</button>
+            <button class="test-btn" data-test="conditional-dsp-integration">DSP Integration (FFT)</button>
+            <button class="test-btn" data-test="conditional-chain-operations">Chain Operations</button>
+            <button class="test-btn" data-test="conditional-combined-functions">Combined Functions</button>
+            <button class="test-btn" data-test="conditional-waveform-analysis">Waveform Analysis</button>
           </div>
         </div>
 
